_sass/main.scss
$primary-color: #e491c9;
$primary-color-hover: #cf82b6;
$foreground-color: #ffffff;
$card-border-color: rgba(230, 230, 230, 0.1);
$card-color: rgba(230, 230, 230, 0.15);
$card-hover-color: rgba(0, 0, 0, 0.15);

@use "navigation";
@use "card";
@use "article";
@use "footer";

@font-face {
    font-family: "Roboto";
    src: url("../fonts/Roboto/Roboto-VariableFont.ttf");
}

@font-face {
    font-family: "EB Garamond";
    src: url("../fonts/EB_Garamond/EBGaramond-VariableFont_wght.ttf");
}

@font-face {
    font-family: "Cormorant";
    src: url("../fonts/Cormorant/Cormorant-VariableFont_wght.ttf");
}

::selection {
    background: $primary-color;
}

body {
    font-family: "EB Garamond", sans-serif;
    margin: 0;
    background: linear-gradient(
        145deg,
        rgb(115, 31, 100) 0%,
        rgb(65, 69, 145) 50%,
        rgb(162, 60, 176) 100%
    );
    background-repeat: no-repeat;
    background-attachment: fixed;
    color: $foreground-color;
}

a,
a:visited {
    color: $foreground-color;
    text-decoration: none;
}

.section-title {
    font-family: "Cormorant", sans-serif;
    font-size: 3em;
    text-align: center;
    margin: 0;
}

.drawing-me {
    display: block;
    margin: auto;
    width: 50%;
    padding: 0;
}

.drawing-credit {
    text-align: center;
    color: rgba(230, 230, 230, 0.25);
}

@media screen and (min-width: 601px) {
    .section-title {
        margin-left: 2rem;
        font-size: 6em;
    }
}

@media screen and (min-width: 1200px) {
    .section-title {
        margin-left: 2rem;
        font-size: 6em;
    }

    .drawing-me {
        width: 20%;
    }
}

